fix:accessibility:Added autocomplete on personal data fields. Replaced aria-required by required. Wrapping errors in a component that's always in the dom having the aria-live='assertive' attribute  & id that is  referenced in the aria-describedby. Removed the message fieldset. Removed the sr-only legend for the query type as it's already labeled and making it inaccessible. Removed role and aria live from the error component.

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,7 +7,7 @@ $grey900: hsl(187, 24%, 22%);
 $labelFontSize: 1rem;
 $inputRadius: 0.3rem;
 $headingFontSize: 1.6rem;
-$inputPadding: 0.6rem;
+$inputPadding: 0.8rem;
 
 @font-face {
   font-family: "Karla";
@@ -45,17 +45,17 @@ body {
 
 main {
   width: 85%;
-  max-width: 35rem;
+  max-width: 40rem;
   height: auto;
   background: $white;
-  padding: 1.5rem;
+  padding: 2rem;
   border-radius: 0.8rem;
 }
 
 form {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: 0.5rem;
   width: 100%;
   position: relative;
   h1 {
@@ -85,6 +85,11 @@ textarea {
   &:focus {
     outline: 1px solid $green600;
     border-color: $green600;
+  }
+
+  .text {
+    display: block;
+    @include hoverOutline;
   }
 }
 
@@ -122,11 +127,6 @@ button {
   &:hover {
     background: hsl(169deg 86.97% 11.87%);
   }
-}
-
-.text {
-  display: block;
-  @include hoverOutline;
 }
 
 input[type="radio"],
